<resources>
    <string name="app_name">Tasabeh</string>
    <string name="counter">0</string>
    <string name="vib">Vibration</string>
    <string name="sou">Sound</string>
    <string name="Toa">Toast</string>
    <string name="res">Reset</string>
    <string name="input">Input</string>
    <string name="ButtonString">سُبْحَانَ اللَّهِ</string>
    <string name="counter2">Count</string>
    <string name="CounterAlert">Counter Alert</string>
    <string name="CounterText">"Counter = 33"</string>
    <string name="textC">"Counter = "</string>
</resources>